--- a/css/main.css
+++ b/css/main.css
@@ -439,6 +439,9 @@ h1, h2, h3 {
     transition: background 0.3s ease;
 }
 
+.confirmation-form button:hover {
+    background: #3C3641;
+}
 
 /* Sección Subir Fotos */
 .upload-section {
@@ -491,21 +494,10 @@ h1, h2, h3 {
     cursor: pointer;
     transition: background 0.3s ease;
 }
-/* Estilos para los CTA */
-.confirmation-form button, .upload-form button {
-    background: #4F3566;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background 0.3s ease;
-}
 
-.confirmation-form button:hover, .upload-form button:hover {
-    background: #CBBADB;
+.upload-form button:hover {
+    background: #3C3641;
 }
-
 
 /* Footer */
 .footer {
